@@ -1,46 +1,48 @@
-# Lab 00 - SRS
+# Phần mềm thuê xe Bike Rental - Thiết kế và cài đặt bởi nhóm 10
 
-## Task
+Các thành viên trong nhóm
 
-Hoàn thành tài liệu đặc tả yêu cầu phần mềm gồm các phần:
+1. Đặng Lâm San
+2. Nguyễn Mai Phương
+3. Dương Hồng Sơn
 
-1. Biểu đồ Usecase
-2. Đặc tả Usecase
-3. Biểu đồ hoạt động
-4. Các yêu cầu phi chức năng.
+## Mô tả chi tiết và demo sản phẩm
 
-## Contributions
+[Video Demo sản phẩm](https://youtu.be/gRvQ3Y3Erc8) 
 
-Thành viên | Nhiệm vụ
------------ | ---------
-Đặng Lâm San | Hoàn thành use case khóa xe, trả xe (kèm biểu đồ hoạt động). Các yêu cầu phi chức năng
-Dương Hồng Sơn | Hoàn thành use case thuê xe, đặt cọc, chuyển mã vạch (kèm biểu đồ hoạt động).
-Nguyễn Mai Phương | Hoàn thành các use case xem thông tin xe, bãi xe, xe đang thuê ...,  biểu đồ use case tổng quan
+## Các file báo cáo Slide, SRS, SDD
 
-## Revisions
+Được đặt tại thư mục `Document`
 
-# Lab 01 - Architectural Design
+## File Astah
 
-Hoàn thành thiết kế kiến trúc
+Được đặt tại thư mục `Astah`
 
-1. Biểu đồ trình tự
-2. Biểu đồ phân tích lớp
+## Source code của phần mềm Bike Rental
 
-## Contributions
+Được đặt tại `BikeGUI`
 
-Thành viên | Nhiệm vụ
------------ | ---------
-Đặng Lâm San | Hoàn thành  khóa xe, trả xe, chuyển mã vạch
-Dương Hồng Sơn | ...
-Nguyễn Mai Phương | Hoàn thành xem thông tin xe, bãi xe, xe đang thuê
+## Javadoc
 
-# Lab 02 - Design
+Được đặt tại `BikeGUI/javadoc`
 
-Hoàn thành thiết kế
-1. Thiết kế giao diện và thiết kế subsystem
+## Hướng dẫn cài đặt sản phẩm Bike Rental
 
-## Contributions
+### Requirements
 
-Thành viên | Nhiệm vụ
------------ | ---------
-Đặng Lâm San | Hoàn thành (1)
+1. Google Json - `gson-2.3.1.jar`
+2. MySQL Connector J - `mysql-connector-java-8.0.22.jar`
+3. JavaFX SDK
+4. Máy tính yêu cầu kết nối mạng để thực hiện các truy vấn giao dịch online
+
+### Installation guide
+
+1. Tải và cài đặt MySQL databases
+2. Cài đặt rent_bike database sử dụng `BikeGUI/rent_bike.sql`
+3. Build Project bằng Eclipse/IntelliJ sau khi đã thêm các requirements.
+
+Nếu không muốn build lại project, người dùng có thể chạy ứng dụng đã được build sẵn bằng file `jar` bằng câu lệnh sau:
+
+`java -jar --module-path "path-to-lib\javafx-sdk-window-11.0.2\lib" --add-modules=javafx.controls,javafx.graphics,javafx.fxml,javafx.base  BikeGUI/out/artifacts/BikeGUI_jar/BikeGUI.jar`
+
+(Sửa `path-to-lib\javafx-sdk-window-11.0.2\lib` trỏ đến thư viện JavaFX máy người dùng)
